test/files/neg/unchecked-knowable.check
unchecked-knowable.scala:20: warning: fruitless type test: a value of type Bippy cannot also be a A1
  /*   warn */ (new Bippy).isInstanceOf[A1]
                                       ^
unchecked-knowable.scala:21: warning: fruitless type test: a value of type Bippy cannot also be a B1
  /*   warn */ (new Bippy).isInstanceOf[B1]
                                       ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
